Fixed footer bar overlap and attempted edge display:none bug

--- a/style.css
+++ b/style.css
@@ -183,6 +183,7 @@ a{
 
 .upload input[type="file"] {
     display: none;
+    visibility: hidden;
 }
 
 .big_button {
